1.14 2021-10-20
~~~~~~~~~~~~~~~

* Updated embedded udunits2 library to version 2.2.28.

* Improved CMake build system.

* Fixed issue when building against HDF5 1.12.

* Updates to product ingestions:
  - AEOLUS L1B: fixed ingestion of Mie/measurement data; added sensor angles
  - AEOLUS L2B: fixed ingestion of Mie data; added sensor angles
  - CLOUDNET L2 classification: added support for new (netcdf4) format
  - EARTHCARE: added very early support (limited version of ECA_ACM_CAP_2B)
  - ECMWF GRIB: fixed unit of backscatter coefficient 1/(milli sr) -> 1/(m sr),
    added support for new masterTablesVersion=27 data
  - GEOMS UVVIS.DOAS: allow template V007 files to be stored in hdf5 format
  - GHG CCI: added support for TROPOMI WFMD L2
  - OMI L2: added sensor alt/lat/lon and surface altitude/pressure
  - OMI L2 OMAERUV: fix ingestion issues
  - QA4ECV HCHO: added amf=clear_sky ingestion option
  - S5P L2 HCHO: renamed cloud_altitude variable to cloud_height
  - S5P L2 NO2: added retrieval of O2-O2 cloud (O22CLD) data
  - S5P L2 NO2+FRESCO: added scene_albedo and scene_pressure
  - S5P L2 O3 Profile: fixed wrong concentration variables (vmr -> nd)
  - S5P L2 SO2: updated SO2_type enumeration list

1.13 2021-03-12
~~~~~~~~~~~~~~~

* Added rebin() operation.

* Added harp_product_rebin_with_axis_bounds_variable() function.

* Added support for datetime_bounds variable.

* Fixed issue in =& operation (it returned true if any of the bits were 1
  instead of all bits).

* Updates to product ingestions:
  - GEOMS: renamed all site_name variables to location_name
  - GEOMS FTIR H2CO: fixed issue in determining unit for H2O data (that would
    fail the ingestion)
  - S5P L2 CO: added co=corrected ingestion option
  - SCIAMACHY L2: fixed averaging of cloud fraction for co-added pixels

1.12 2020-10-29
~~~~~~~~~~~~~~~

* The csv output of 'harpdump --dataset' can now be used as content of a .pth
  file. This improves the performance of harpcollocate/harpmerge/etc. as they